# AoC2020

./: README.md
AoC2020-src/: CMakeLists.txt
AoC2020-src/AoC2020/: CMakeLists.txt  SolverFunctions.cpp  SolverFunctions.h  main.cpp  main.h
